<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".presentation.view.MainInfoFragment">

    <ImageView
        android:id="@+id/logo_club"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_marginTop="@dimen/logo_margin_top"
        android:contentDescription="@string/description_logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/body_of_name_and_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_10dp"
        app:layout_constraintEnd_toEndOf="@+id/logo_club"
        app:layout_constraintStart_toStartOf="@+id/logo_club"
        app:layout_constraintTop_toBottomOf="@+id/logo_club">

        <TextView
            android:id="@+id/name_of_club"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/size_4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name_of_club"
            android:textSize="@dimen/text_24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/place_in_the_league"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/size_4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/place_in_the_league"
            android:textSize="@dimen/text_24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/logo_club"
            app:layout_constraintStart_toStartOf="@+id/logo_club"
            app:layout_constraintTop_toBottomOf="@+id/logo_club" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/body_of_founded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body_of_name_and_place">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/date_of_founded_body"
            android:textSize="@dimen/text_20sp" />

        <TextView
            android:id="@+id/date_of_founded"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/year_of_founded"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/body_of_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body_of_founded">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/country_body"
            android:textSize="@dimen/text_20sp" />

        <TextView
            android:id="@+id/name_of_country"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/name_of_country"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/body_of_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body_of_country">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/city_body"
            android:textSize="@dimen/text_20sp" />

        <TextView
            android:id="@+id/name_of_city"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/name_of_city"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/body_of_venue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body_of_city">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/stadium_body"
            android:textSize="@dimen/text_20sp" />

        <TextView
            android:id="@+id/name_of_venue"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/name_of_stadium"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/body_of_capacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body_of_venue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/size_of_stadium_body"
            android:textSize="@dimen/text_20sp" />

        <TextView
            android:id="@+id/size_of_stadium"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/capacity_of_stadium"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_to_site_height"
        android:layout_marginTop="12dp"
        android:text="@string/text_button"
        android:textSize="@dimen/text_20sp"
        android:textColor="@color/black"
        android:backgroundTint="#F7E301"
        app:cardElevation="@dimen/size_4dp"
        app:layout_constraintEnd_toEndOf="@+id/body_of_capacity"
        app:layout_constraintStart_toStartOf="@+id/body_of_capacity"
        app:layout_constraintTop_toBottomOf="@id/body_of_capacity" />


</androidx.constraintlayout.widget.ConstraintLayout>