<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_of_player"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_8dp"
    app:cardCornerRadius="@dimen/size_8dp"
    app:cardElevation="@dimen/size_4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_16dp">

        <ImageView
            android:id="@+id/photo_of_player"
            android:layout_width="@dimen/player_photo_weight"
            android:layout_height="@dimen/player_photo_height"
            android:src="@drawable/ic_player"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/photo_of_player" />

        <TextView
            android:id="@+id/name_of_player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name_of_player"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/size_8dp"
            app:layout_constraintStart_toEndOf="@+id/photo_of_player"
            app:layout_constraintTop_toTopOf="@+id/photo_of_player"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/player_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/position_of_player"
            android:textSize="@dimen/text_14sp"
            android:layout_marginStart="@dimen/size_8dp"
            app:layout_constraintEnd_toEndOf="@+id/name_of_player"
            app:layout_constraintStart_toEndOf="@+id/photo_of_player"
            app:layout_constraintTop_toBottomOf="@+id/name_of_player" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>