<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_of_player"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_8dp"
    app:cardElevation="@dimen/size_4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_16dp">

        <TextView
            android:id="@+id/place_of_the_club"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/place_of_the_club"
            android:layout_marginEnd="@dimen/size_4dp"
            android:textSize="@dimen/text_20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_of_the_club"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_8dp"
            android:text="@string/name_of_the_club"
            android:layout_marginEnd="@dimen/size_4dp"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/logo_of_the_club"
            app:layout_constraintStart_toEndOf="@id/place_of_the_club"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo_of_the_club"
            android:layout_width="@dimen/club_logo_weight"
            android:layout_height="@dimen/club_logo_height"
            android:src="@drawable/ic_tournament"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/logo_of_the_club" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>